--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #cecece;
+  background-color: #fefefe;
 }
 .container {
   margin: 20px auto;
@@ -7,4 +7,8 @@ body {
 }
 .header {
   text-align: center;
+}
+
+.lectures {
+  margin-bottom: 100px;
 }
